--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_PUB_ID" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" />
@@ -14,7 +15,9 @@
 </head>
 <body>
 
-
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <header>
         <img src="assets/svg/logo.svg" alt="Protein logo">
         <nav class="navigation">
